# src/main/java/com/lippio/shortest_path/service/TripRequestServiceImpl.java
@@ -1,0 +1,31 @@
+package com.lippio.shortest_path.service;
+
+import com.example.api.generated.model.RequestTripDTO;
+import com.example.api.generated.model.ResponseTripDTO;
+import com.lippio.shortest_path.entity.TripEntity;
+import com.lippio.shortest_path.mapper.controllers_dto.TripMapper;
+import lombok.AllArgsConstructor;
+import org.springframework.stereotype.Service;
+
+import java.time.LocalDateTime;
+import java.util.List;
+
+@Service
+@AllArgsConstructor
+public class TripRequestServiceImpl implements TripRequestService {
+
+    private final TripService tripService;
+
+    @Override
+    public void saveTrip(final RequestTripDTO tripDTO) {
+        final TripEntity tripEntity = TripMapper.INSTANCE.toTripEntity(tripDTO);
+        tripEntity.setCreatedAt(LocalDateTime.now());
+        tripService.saveTrip(tripEntity);
+    }
+
+    @Override
+    public List<ResponseTripDTO> getAllTrips() {
+        final List<TripEntity> tripEntities = tripService.getAllTrips();
+        return tripEntities.stream().map(TripMapper.INSTANCE::toResponseTripDTO).toList();
+    }
+}
